Fixed problem with busyloader text wrong position.

--- a/src/app/calories-handler/BusyLoader/BusyLoader.component.css
+++ b/src/app/calories-handler/BusyLoader/BusyLoader.component.css
@@ -8,7 +8,5 @@
 
 .busy-loader-text {
     position: absolute;
-    top: 50%;
-    left: 35%;
     font-size: xx-large;
 }
